add api monthly and weekly fot statistics